teste ArrayList class finalizado